force-app/main/default/objects/Assigned_Membership_Promotion__c/Assigned_Membership_Promotion__c.object-meta.xml
<CustomObject>
    <description>Junction object to assign membership promotions to membership types</description>
    <label>Assigned Membership Promotion</label>
    <nameField>
        <displayFormat>AMP-{00000}</displayFormat>
        <label>Assigned Membership Promotions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Membership Promotions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>