force-app/main/default/objects/Assigned_Membership_Promotion__c/fields/Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Amount__c</fullName>
    <formula>Membership_Promotion__r.Credit_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>