force-app/main/default/objects/Assigned_Membership_Promotion__c/fields/Date_Range__c.field-meta.xml
<CustomField>
    <fullName>Date_Range__c</fullName>
    <formula>TEXT( MONTH( Membership_Promotion__r.Start_Date__c ) ) &amp; &quot;/&quot; &amp; 
TEXT( DAY( Membership_Promotion__r.Start_Date__c ) ) &amp; &quot;/&quot; &amp; 
TEXT( year( Membership_Promotion__r.Start_Date__c ) ) &amp; &quot; - &quot; &amp; 

TEXT( MONTH( Membership_Promotion__r.End_Date__c ) ) &amp; &quot;/&quot; &amp; 
TEXT( DAY( Membership_Promotion__r.End_Date__c ) ) &amp; &quot;/&quot; &amp; 
TEXT( year( Membership_Promotion__r.End_Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Range</label>
    <type>Text</type>
</CustomField>