force-app/main/default/objects/Assigned_Membership_Promotion__c/fields/Membership_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Membership_Promotion__c</fullName>
    <label>Membership Promotion</label>
    <referenceTo>Membership_Promotion__c</referenceTo>
    <relationshipName>Assigned_Membership_Promotions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>