force-app/main/default/objects/Assigned_Membership_Promotion__c/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Membership Type</label>
    <referenceTo>TREX1__Membership_Type__c</referenceTo>
    <relationshipName>Assigned_Membership_Promotions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>